--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Which Character</string>
+    <string name="characters">Personagens</string>
+    <string name="random_character">Personagem aleatória</string>
+    <string name="character_image">Character Image</string>
 </resources>
